update for searching problem detail
